# zBot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  about.md  fig.zbot.geode  mod.json
.github/workflows/: build.yml
libraries/imgui-wrapper/: CMakeLists.txt
src/: clickbetweenframescompat.cpp  clickbot.cpp  framecounting.cpp  frametimes.cpp  gui.cpp  gui.hpp  imgui_impl.cpp  imgui_interface.cpp  imgui_interface.hpp  keybinds.cpp  main.cpp  physicsbypass.cpp  playbackmanager.cpp  practicemode.cpp  recordmanager.cpp  replay.cpp  replay.hpp  speedhackaudio.cpp  utils.hpp  zBot.hpp
